--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,7 @@ body {
   color: #333;
   font-family: Helvetica, Arial, sans-serif;
   background-color: skyblue; /* Sanity Check! */
+  text-align: center;
 }
 
 h1 {
